Icon 'new message' was added